# okra

./: .gitignore  .ocamlformat  CHANGELOG  CHANGES.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  dune-project  okra-bin.opam  okra-lib.opam  okra.opam  okra.opam.template
.github/workflows/: build.yml  changelog-check.yml
docs/: README.md  configuration-file.md  emacs-integration.md  engineers-manual.md  github-token.md  releasing-okra.md  report-formats.md  team-leads-manual.md  vim-integration.md
emacs/: dune  okra.el
lib/: KR.ml  KR.mli  activity.ml  activity.mli  aggregate.ml  aggregate.mli  calendar.ml  calendar.mli  dune  filter.ml  filter.mli  item.ml  item.mli  lint.ml  lint.mli  masterdb.ml  masterdb.mli  parser.ml  parser.mli  quarter.ml  quarter.mli  repo_report.ml  repo_report.mli  report.ml  report.mli  team.ml  team.mli  time.ml  time.mli  user.ml  user.mli  week.ml  week.mli
scripts/: release.sh
src/: KR.ml  KR.mli  activity.ml  activity.mli  aggregate.ml  aggregate.mli  calendar.ml  calendar.mli  dune  filter.ml  item.ml  lint.ml  lint.mli  masterdb.ml  masterdb.mli  monthly.ml  parser.ml  parser.mli  printer.ml  printer.mli  repo_report.ml  repo_report.mli  report.ml  report.mli  reports.ml  reports.mli  team.ml  team.mli
syntax_checkers/markdown/: okra.vim
test/: alcotest_ext.mli  dune  test.ml  test_aggregate.ml  test_calendar.ml  test_filter.ml  test_lint.ml  test_reports.ml
test/aggregate/: kr_agg1.acc  valid-time1.acc
test/cram/: dune  lint-errors.t
test/cram/cat/: aggr.t  masterdb.t  merge.t  migrate.t
test/cram/cat/format.t/: run.t
test/cram/cat/format.t/admin/weekly/2024/01/: eng1.md
test/cram/cat/format.t/admin/weekly/2024/24/: eng1.md
test/cram/generate-projects.t/: conf.yaml  run.t
test/cram/lint/: conf.t  db.t  engineer.t  errors.t  features.t  includes.t  meta.t  migrate.t  quarter.t  short.t  team.t  time.t
test/cram/lint-errors.t/: multitime1.rej  no-time1.rej  run.t
test/cram/stats.t/: dune  run.t
test/cram/stats.t/admin/data/: team-objectives.csv
test/cram/stats.t/admin/weekly/2022/40/: eng1.md
test/cram/stats.t/admin/weekly/2022/41/: eng1.md  eng2.md
test/cram/stats.t/admin/weekly/2022/43/: eng1.md  eng2.md
test/cram/stats.t/admin/weekly/2024/23/: eng1.md
test/cram/stats.t/admin/weekly/2024/24/: eng2.md
test/cram/team-aggregate.t/: conf.yml  run.t
test/cram/team-aggregate.t/admin/weekly/2022/40/: eng1.md
test/cram/team-aggregate.t/admin/weekly/2022/41/: eng2.md
test/cram/team-aggregate.t/admin/weekly/2024/40/: eng2.md
test/cram/team-aggregate.t/admin/weekly/2024/41/: eng1.md
test/cram/team-lint.t/: run.t
test/cram/team-lint.t/admin/data/: db.csv  team-objectives.csv
test/cram/team-lint.t/admin/weekly/2022/39/: eng1.md  eng2.md
test/cram/team-lint.t/admin/weekly/2022/43/: eng1.md
test/cram/team-lint.t/admin/weekly/2024/19/: eng1.md
test/cram/team-lint.t/admin/weekly/2024/41/: eng2.md
test/cram/team-lint.t/admin/weekly/2024/43/: eng1.md
test/expect/: dune  test_engineer.expected  test_engineer.ml  test_monthly.expected  test_monthly.ml
test/pp/: aggr.md  db.csv  dune  eng1.md  eng2.md  test.ml  use_db.md  use_db_replaced.md
test/reports/: kr_agg1.acc  newkr_exists1.acc
test/unit/: alcotest_ext.ml  dune  test.ml  test_calendar.mli  test_filter.ml
test/unit/reports/: newkr_replaced1.acc  work_item.acc
