(executable
 (name test)
 (modules test)
 (libraries okra-lib logs.fmt))

(rule
 (deps
  (:file1 use_db.md)
  (:file2 db.csv))
 (action
  (with-stdout-to
   use_db.md.pp
   (run ./test.exe --use-db %{file1}))))

(rule
 (alias runtest)
 (package okra-lib)
 (action
  (diff use_db_replaced.md use_db.md.pp)))

(rule
 (deps
  (:file eng1.md))
 (action
  (with-stdout-to
   eng1.md.pp
   (run ./test.exe %{file}))))

(rule
 (alias runtest)
 (package okra-lib)
 (action
  (diff eng1.md eng1.md.pp)))

(rule
 (deps
  (:file1 eng1.md)
  (:file2 eng2.md))
 (action
  (with-stdout-to
   aggr.md.pp
   (run ./test.exe %{file1} %{file2}))))

(rule
 (alias runtest)
 (package okra-lib)
 (action
  (diff aggr.md aggr.md.pp)))
